# workbench-sdk

./: CLAUDE.md  NODE_GUIDELINES.md  README.md  package-lock.json
.claude/: settings.local.json
nodes/: all-nodes-simple.config.json  all-nodes.config.json
nodes/absolute/: absolute.config.json  absolute.process.py
nodes/absolute-value/: absolute-value.config.json  absolute-value.process.py
nodes/add/: add.config.json  add.process.py
nodes/airtable-create-record/: airtable-create-record.config.json  airtable-create-record.process.js  airtable-create-record.process.py  airtable-create-record.tests.json
nodes/airtable-delete-record/: airtable-delete-record.config.json  airtable-delete-record.process.js  airtable-delete-record.process.py  airtable-delete-record.tests.json
nodes/airtable-get-record/: airtable-get-record.config.json  airtable-get-record.process.js  airtable-get-record.process.py  airtable-get-record.tests.json
nodes/airtable-list-records/: airtable-list-records.config.json  airtable-list-records.process.js  airtable-list-records.process.py  airtable-list-records.tests.json
nodes/airtable-update-record/: airtable-update-record.config.json  airtable-update-record.process.js  airtable-update-record.process.py  airtable-update-record.tests.json
nodes/and-gate/: and-gate.config.json  and-gate.process.py
nodes/anthropic-claude-3-5-haiku/: anthropic-claude-3-5-haiku.config.json  anthropic-claude-3-5-haiku.process.js  anthropic-claude-3-5-haiku.process.py
nodes/anthropic-claude-3-5-haiku-20241022/: anthropic-claude-3-5-haiku-20241022.config.json  anthropic-claude-3-5-haiku-20241022.process.js  anthropic-claude-3-5-haiku-20241022.process.py
nodes/anthropic-claude-3-5-sonnet/: anthropic-claude-3-5-sonnet.config.json  anthropic-claude-3-5-sonnet.process.js  anthropic-claude-3-5-sonnet.process.py
nodes/anthropic-claude-3-7-sonnet/: anthropic-claude-3-7-sonnet.config.json  anthropic-claude-3-7-sonnet.process.js  anthropic-claude-3-7-sonnet.process.py
nodes/anthropic-claude-3-7-sonnet-thinking/: anthropic-claude-3-7-sonnet-thinking.config.json  anthropic-claude-3-7-sonnet-thinking.process.js  anthropic-claude-3-7-sonnet-thinking.process.py
nodes/anthropic-claude-3-haiku/: anthropic-claude-3-haiku.config.json  anthropic-claude-3-haiku.process.js  anthropic-claude-3-haiku.process.py
nodes/anthropic-claude-3-opus/: anthropic-claude-3-opus.config.json  anthropic-claude-3-opus.process.js  anthropic-claude-3-opus.process.py
nodes/anthropic-claude-haiku-4-5/: anthropic-claude-haiku-4-5.config.json  anthropic-claude-haiku-4-5.process.js  anthropic-claude-haiku-4-5.process.py
nodes/anthropic-claude-opus-4-1/: anthropic-claude-opus-4-1.config.json  anthropic-claude-opus-4-1.process.js  anthropic-claude-opus-4-1.process.py
nodes/anthropic-claude-opus-4-5/: anthropic-claude-opus-4-5.config.json  anthropic-claude-opus-4-5.process.js  anthropic-claude-opus-4-5.process.py
nodes/anthropic-claude-opus-4-6-fast/: anthropic-claude-opus-4-6-fast.config.json  anthropic-claude-opus-4-6-fast.process.js  anthropic-claude-opus-4-6-fast.process.py
nodes/array-builder/: array-builder.config.json  (+2 more)
scripts/: README.md  embedding-generator.config.json  fix_python_signatures.py  generate_embedding_nodes.js  generate_llm_nodes.js  generate_rerank_nodes.js  generator.config.example.json  generator.config.json  package-lock.json  package.json  rerank-generator.config.json  sync_sdks.py
sdks/python/: .env.example  .gitignore  README.md  pyproject.toml
sdks/python/src/: __init__.py  cache.py  engine.py  errors.py  helpers.py  loaders.py  mcp.py  types.py  validators.py
sdks/python/src/integrations/: AIRTABLE_TEST_SETUP.md  NOTION_TEST_SETUP.md  __init__.py  airtable.py  confluence.py  firecrawl.py  github.py  google_custom_search.py  hubspot.py  jira.py  knowledge_base_interface.py  linear.py  newsdata_io.py  notion.py  openai.py  openrouter.py  pinecone.py  resend.py  sendgrid.py  slack.py  sqlite.py  stripe.py  supabase.py  twilio.py
sdks/python/src/utilities/: __init__.py  oauth.py  sanitize_api_call.py
sdks/python/tests/: __init__.py  test_all_nodes.py  test_flows.py  test_preemptive_timeout.py
tests/: flow.loop-early-exit.json
types/: conversation.json
(+1462 files in other folders)
