[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zv1"
version = "0.4.3"
description = "The zv1 SDK for executing AI orchestration flows created via zv1.ai, by ZeroWidth"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Peter Binggeser @ ZeroWidth, LLC", email = "peter@zerowidth.ai" }
]
keywords = ["ai", "orchestration", "llm", "workflow", "agents", "zerowidth"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.7.0",
    "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.0.0",
]
sqlite = [
    "aiosqlite>=0.20.0",
    "sqlite-vec>=0.1.1",
]
all = [
    "zv1[dev,sqlite]",
]

[project.urls]
Homepage = "https://zv1.ai"
Documentation = "https://zv1.ai/docs"
Repository = "https://github.com/zerowidth-ai/zv1"
Issues = "https://github.com/zerowidth-ai/zv1/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/nodes",
    "/types",
    "/tests",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
